test/fail/alias-t.rnp
alias x = (L:X, bool);
x = 1;
---
 --> fail/alias-t.rnp:2:5
  |
2 | x = 1;
  |     ^ Expected boolean but got number
  |
